--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/yoneda/todo-api#readme",
   "dependencies": {
+    "@types/express": "^4.17.6",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4"
