--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "add some comments",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "tsc:watch": "tsc --watch index.ts",
+    "dev:watch": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -17,9 +19,12 @@
   },
   "homepage": "https://github.com/yoneda/todo-api#readme",
   "dependencies": {
-    "@types/express": "^4.17.6",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.6",
+    "nodemon": "^2.0.4"
   }
 }
