[fix] npm install concurrently

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "tsc:watch": "tsc --watch index.ts",
-    "dev:watch": "nodemon index.js"
+    "nodemon:watch": "nodemon index.js",
+    "dev:watch": "concurrently --kill-others 'npm run tsc:watch' 'npm run nodemon:watch'"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.6",
+    "concurrently": "^5.2.0",
     "nodemon": "^2.0.4"
   }
 }
