--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "tsc:watch": "tsc --watch index.ts --outDir 'build' --esModuleInterop",
     "nodemon:watch": "nodemon ./build/index.js",
-    "dev:watch": "concurrently --kill-others 'npm run tsc:watch' 'npm run nodemon:watch'"
+    "dev:watch": "concurrently --kill-others 'npm run tsc:watch' 'npm run nodemon:watch'",
+    "db:migrate": "ts-node dbscript.ts --migrate",
+    "db:seed": "ts-node dbscript.ts --seed",
+    "db:drop": "ts-node dbscript.ts --drop"
   },
   "repository": {
     "type": "git",
@@ -22,12 +25,16 @@
   "dependencies": {
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
-    "express-async-handler": "^1.1.4"
+    "express-async-handler": "^1.1.4",
+    "knex": "^0.21.1",
+    "sqlite": "^4.0.8",
+    "sqlite3": "^4.2.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.6",
     "concurrently": "^5.2.0",
     "nodemon": "^2.0.4",
+    "ts-node": "^8.10.1",
     "typescript": "^3.9.3"
   }
 }
